--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,8 @@ dependencies = [
     "plotly>=6.5.0",
     "polars>=1.35.2",
     "pydantic>=2.12.5",
+    "yfinance-pl>=0.7.2.2",
 ]
 
 [dependency-groups]
-dev = [
-    "isort>=7.0.0",
-    "ruff>=0.14.7",
-]
+dev = ["isort>=7.0.0", "ruff>=0.14.7"]
